--- a/llama-index-integrations/embeddings/llama-index-embeddings-voyageai/pyproject.toml
+++ b/llama-index-integrations/embeddings/llama-index-embeddings-voyageai/pyproject.toml
@@ -32,7 +32,7 @@ version = "0.1.4"
 [tool.poetry.dependencies]
 python = ">=3.8.1,<4.0"
 llama-index-core = "^0.10.1"
-voyageai = "^0.1.6"
+voyageai = "<0.3,>=0.1.6"
 
 [tool.poetry.group.dev.dependencies]
 ipython = "8.10.0"
